telah mengubah web pada file informasi.html pada branch informasi

--- a/informasi.html
+++ b/informasi.html
@@ -9,15 +9,15 @@
 </head>
 <body style="background-image: linear-gradient(#FA9884,#FFE5CA);background-repeat: no-repeat;">
     <center>
-        <h1>SELAMAT DATANG PADA KURSUS TEKNOLOGI PERISIAN PEMBANGUNAN WEB.</h1>
+        <h1>HALAMAN INFORMASI PERPUSTAKAAN</h1>
     </center>
     
     <ul class="nav nav-tabs" style="background-color: #FFE5CA;" >
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+          <a class="nav-link " aria-current="page" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="information.html">Info</a>
+          <a class="nav-link active" href="informasi.html">Info</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="daftar-buku.html">Daftar-buku</a>
@@ -31,7 +31,7 @@
         <div class="card" style="width: 18rem;">
             <img src="..." class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">BUKU KARTUN</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
@@ -39,7 +39,7 @@
           <div class="card" style="width: 18rem;">
             <img src="..." class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">SEJARAH</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
@@ -47,7 +47,7 @@
           <div class="card" style="width: 18rem;">
             <img src="..." class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">SAINS</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
