telah mengubah link active dari home to daftar-buku

--- a/daftar-buku.html
+++ b/daftar-buku.html
@@ -14,13 +14,13 @@
     
     <ul class="nav nav-tabs" style="background-color: #FFE5CA;" >
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+          <a class="nav-link " aria-current="page" href="index.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="information.html">Info</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="daftar-buku.html">Daftar-buku</a>
+          <a class="nav-link active" href="daftar-buku.html">Daftar-buku</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="katalog.html">Katalog-buku</a>
